<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:padding="20dp"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/concederPermissãoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_permissão" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/ativarGPSButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ativar"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/marginRight"
         />


    <Button
        android:id="@+id/desativarGPSButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desativarGPS"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/marginBottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


    <Button
        android:id="@+id/iniciarPercursoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarPercurso"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_weight="1"/>



    <Button
        android:id="@+id/terminarPercursoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminarPercurso"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/marginBottom"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/label"
        android:text="@string/distanciaPercorrida">
    </TextView>

    <TextView
    android:id="@+id/distanciaPercorridaTextView"
    android:layout_weight="1"
    android:gravity="left"
    android:text="0 Km"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/label"
        android:text="@string/tempoGasto" />

    <Chronometer
        android:id="@+id/tempoChronometer"
        android:layout_weight="1"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/rotaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:hint="@string/rotaEditText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    </LinearLayout>




</LinearLayout>